--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="folder_settings_add_title">Create...</string>
+    <string name="folder_settings_add_app">App</string>
+    <string name="folder_settings_add_app_activities">Activities</string>
+    <string name="folder_settings_add_app_shortcuts">Shortcuts</string>
+    <string name="folder_settings_add_folder">Folder</string>
 </resources>
