first version of the launcher service providing the system overlay for starting the launcher

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="folder_settings_add_app_shortcuts">Shortcuts</string>
     <string name="folder_settings_add_folder">Folder</string>
     <string name="title_activity_edit_folder">EditFolderActivity</string>
+    <string name="title_activity_launcher">LauncherActivity</string>
 </resources>
