added launcher icon (not very good looking, has to be revised :) ) added Virtual folder mechanism => if the entries don't fit onto the screen then a virtual folder gets created that contains the "rest"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
 
     <string name="fragment_edit_folder_name">Name:</string>
     <string name="fragment_edit_folder_new_folder_name">New Folder</string>
+
+    <string name="launcher_virtual_folder_name">more...</string>
 </resources>
