localized some strings added view that indicates that there is no entry in a list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,14 @@
     <string name="notification_content_inactive">PaperLaunch paused</string>
     <string name="title_activity_settings">Settings</string>
 
+    <string name="fragment_edit_folder_empty_hint">To add entries to this folder use the \'+\' button.</string>
+    <string name="fragment_settings_category_activation_title">Activation</string>
+    <string name="fragment_settings_activation_sensitivity_title">Sensitivity</string>
+    <string name="fragment_settings_activation_offset_height_title">Height</string>
+    <string name="fragment_settings_activation_offset_position_title">Position</string>
+    <string name="fragment_settings_appearance_background_title">Show background</string>
+    <string name="fragment_settings_category_appearance_title">Appearance</string>
+    <string name="fragment_settings_appearance_background_summary_on">Background is shown</string>
+    <string name="fragment_settings_appearance_background_summary_off">Background is not shown</string>
+
 </resources>
