--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,18 @@
 <resources>
     <string name="app_name">PaperLaunch</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+    <string name="title_activity_edit_folder">EditFolderActivity</string>
+    <string name="title_activity_launcher">LauncherActivity</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_about">About</string>
 
     <string name="folder_settings_add_title">Create...</string>
     <string name="folder_settings_add_app">App</string>
     <string name="folder_settings_add_app_activities">Activities</string>
     <string name="folder_settings_add_app_shortcuts">Shortcuts</string>
     <string name="folder_settings_add_folder">Folder</string>
-    <string name="title_activity_edit_folder">EditFolderActivity</string>
-    <string name="title_activity_launcher">LauncherActivity</string>
 
     <string name="fragment_edit_folder_name">Name:</string>
     <string name="fragment_edit_folder_new_folder_name">New Folder</string>
@@ -21,7 +23,6 @@
     <string name="notification_play">Start</string>
     <string name="notification_content_active">PaperLaunch running</string>
     <string name="notification_content_inactive">PaperLaunch paused</string>
-    <string name="title_activity_settings">Settings</string>
 
     <string name="fragment_edit_folder_empty_hint">To add entries to this folder use the \'+\' button.</string>
     <string name="fragment_settings_category_activation_title">Activation</string>
@@ -32,6 +33,9 @@
     <string name="fragment_settings_category_appearance_title">Appearance</string>
     <string name="fragment_settings_appearance_background_summary_on">Background is shown</string>
     <string name="fragment_settings_appearance_background_summary_off">Background is not shown</string>
-    <string name="title_activity_about">About</string>
-
+    <string name="fragment_settings_activation_vibrate_on_activation_title">Vibrate on activation</string>
+    <string name="fragment_settings_activation_vibrate_on_activation_summary_on">PaperLaunch vibrates on activation</string>
+    <string name="fragment_settings_activation_vibrate_on_activation_summary_off">PaperLaunch doesn\'t vibrate on activation</string>
+    <string name="fragment_settings_appearance_side_optionleft">Left</string>
+    <string name="fragment_settings_appearance_side_optionright">Right</string>
 </resources>
