--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,8 @@
     <string name="fragment_settings_appearance_gravity_optiontop_summary">Entries are top-aligned</string>
     <string name="fragment_settings_appearance_gravity_optioncenter_summary">Entries are center-aligned</string>
     <string name="fragment_settings_appearance_gravity_optionbottom_summary">Entries are bottom-aligned</string>
+
+    <string name="permission_request_title">Permission request</string>
+    <string name="permission_request_description">PaperLaunch needs the permission to draw over system UI in order to function properly.</string>
+    <string name="permission_request_button_ok">OK</string>
 </resources>
