--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,4 +82,9 @@
     <string name="fragment_settings_activation_show_logo_summary_on">Logo is shown</string>
     <string name="fragment_settings_activation_show_logo_summary_off">Logo is not shown</string>
     <string name="folder_settings_add_cancel">Cancel</string>
+    <string name="title_activity_edit_setting">Choose Action</string>
+    <string name="activity_edit_setting_explanation_txt">This Action is able to activate or deactivate PaperLaunch. Please choose what this action should do</string>
+    <string name="activity_edit_setting_rbEnable">Enable PaperLaunch</string>
+    <string name="activity_edit_setting_rbDisable">Disable PaperLaunch</string>
+    <string name="activity_edit_setting_btn_ok">OK</string>
 </resources>
