Changes: 	* Fixed activation view filling the whole screen on horizontal orientation with slightly modified `calculateActivationIndicatorSize`. Instead of using dip 	  it is now using percentage so that the height in vertical orientation is proportional to the horizontal orientation height 	* Added `system gesture exclusion rects` to prevent conflicting with android's back gesture starting Android 10 	* Added option to display hint on the activation area

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,4 +90,7 @@
     <string name="activity_edit_setting_description_enable">Activate</string>
     <string name="activity_edit_setting_description_disable">Pause</string>
     <string name="activity_edit_setting_new_paperlaunch_state">New PaperLaunch state:</string>
+    <string name="fragment_settings_activation_show_hint_title">Show activation hint</string>
+    <string name="fragment_settings_activation_show_hint_summary_on">Activation hint is shown</string>
+    <string name="fragment_settings_activation_show_hint_summary_off">Activation hint is not shown</string>
 </resources>
